2nd completion of tutorial

--- a/src/main/resources/templates/projects/new-project.html
+++ b/src/main/resources/templates/projects/new-project.html
@@ -57,7 +57,7 @@
 		<!--input type="hidden" name="_csrf" th:value="${_csrf.token}" /
 		CAN BE COMMENTED OUT AS <form th:action="@ DEALS WITH CSRF ABOVE-->
 		
-		<button class="btn btn-info col-2" type="submit">Enter Project</button>
+		<button class="btn btn-info col-2" type="submit">Create Project</button>
 		
 		</form>
 	</div>
