--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -39,7 +39,7 @@
 		<!--input type="hidden" name="_csrf" th:value="${_csrf.token}" /
 		CAN BE COMMENTED OUT AS <form th:action="@ DEALS WITH CSRF ABOVE-->
 		
-		<button class="btn btn-info col-2" type="submit">Enter Employee</button>
+		<button class="btn btn-info col-2" type="submit">Create Employee</button>
 		
 		</form>
 	</div>
